# pdrift-rs

./: .mise.toml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml
.github/workflows/: ci.yml  dependabot.yml
src/: cli.rs  compare.rs  lib.rs  lockfile.rs  main.rs  output.rs
tests/: compare_tests.rs  lockfile_tests.rs  output_tests.rs
