[package]
name = "pdrift-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hectcastro/pdrift-rs"

[lib]
name = "pdrift_rs"
path = "src/lib.rs"

[[bin]]
name = "pdrift"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
pep440_rs = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"
